# vajra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/design/: 2026-07-04-institutional-grade-roadmap.md  2026-07-04-sp1-execution-realism-plan.md
examples/: quickstart.rs
src/: cost.rs  data.rs  engine.rs  fill.rs  greeks.rs  lib.rs  marketdata.rs  reporting.rs
src/strategies/: mod.rs  moving_average_crossover.rs
tests/: cost.rs  data.rs  golden.rs  reporting.rs
tests/fixtures/: eq_ohlcv.csv  opt_long.csv
