[package]
name = "vajra"
version = "0.1.0"
edition = "2021"
description = "A lean, fast, options-native backtesting engine for Rust."
repository = "https://github.com/<owner>/vajra"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["backtesting", "options", "trading", "quant"]
categories = ["finance", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
polars = { version = "0.36", features = ["lazy", "csv", "parquet", "strings", "temporal", "dtype-datetime"] }
ta = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
[dev-dependencies]
tempfile = "3.8"
approx = "0.5"
